Bug 54466 - UI Word count dialog wrong display
Summary: UI Word count dialog wrong display
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks: Word-Count
  Show dependency treegraph
 
Reported: 2012-09-03 21:22 UTC by Samuel Mehrbrodt
Modified: 2016-10-24 21:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Word count dialog (26.67 KB, image/png)
2012-09-03 21:22 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2012-09-03 21:22:40 UTC
Created attachment 66580 [details]
Word count dialog

The numbers on the right side of the dialog are cut-off a bit (at least on Ubuntu, see attached screenshot).
Comment 1 leighman 2012-09-10 17:13:14 UTC
Confirmed with 3.6.1 on Quantal
Comment 2 Michael Meeks 2012-11-01 14:40:35 UTC
Caolan - I assume this is fixed by the new layout work ? :-)
Comment 3 Caolán McNamara 2012-11-01 15:42:36 UTC
Nah, the problem is in right-aligned labels regardless of having containers or not. 

That sliver shaved off appears to come all the way back from http://cgit.freedesktop.org/libreoffice/core/commit/?id=aae8a0c8ea27a1a6451c28d66de1ee7f0f0323ef
Assuming that commit is necessary, then probably best solution is to increase the *left* pos on right align and remain increasing the right pos on left/centre align
Comment 4 Not Assigned 2012-11-01 15:44:34 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e217fc455208a1f83bad0af06b9cf96bca3b254e

Resolves: fdo#54466 right-aligned label text slightly clipped on right



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2012-11-01 15:48:39 UTC
looks visually fixed for me now