Resolves: fdo#54466 right-aligned label text slightly clipped on right

aae8a0c8ea27a1a6451c28d66de1ee7f0f0323ef with rather unhelpful
"#99188# enlarge textrect to get rid of rounding problems" comment
appears to be the root. Lets assume that commit is necessary and
just adjust alternatively for right align

Change-Id: I0b60c12199226ca757596c034599b81c1a4db433